--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "chmod-checkbox",
   "version": "0.0.1",
-  "description": "Stencil Component Starter",
+  "description": "Simple and ready to use chmod based checkbox web component with StencilJS",
   "main": "dist/index.js",
   "module": "dist/index.mjs",
   "es2015": "dist/esm/index.mjs",
@@ -25,8 +25,5 @@
     "@stencil/core": "^1.3.3",
     "@stencil/sass": "^1.0.1"
   },
-  "license": "MIT",
-  "dependencies": {
-    "bootstrap": "^4.3.1"
-  }
+  "license": "MIT"
 }
