--- a/package.json
+++ b/package.json
@@ -25,5 +25,8 @@
     "@stencil/core": "^1.3.3",
     "@stencil/sass": "^1.0.1"
   },
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "lodash": "^4.17.15"
+  }
 }
